# 10ff

./: LICENSE.md  README.md  english.txt  pyproject.toml  setup.py
10ff/: __main__.py  game.py  populate-corpora  raw_terminal.py  util.py
10ff/data/: albanian.txt  arabic.txt  azerbaijani-advanced.txt  azerbaijani.txt  catalan-advanced.txt  czech-advanced.txt  dutch-advanced.txt  dutch.txt  english-advanced.txt  esperanto.txt  estonian.txt  finnish-advanced.txt  french-advanced.txt  galician-advanced.txt  galician.txt  german-advanced.txt  german.txt  hebrew-advanced.txt  hebrew.txt  hindi-advanced.txt  hindi.txt  indonesian-advanced.txt  indonesian.txt  italian-advanced.txt  italian.txt  japanese.txt  korean.txt  latvian.txt  lithuanian.txt  malaysian-advanced.txt  malaysian.txt  norwegian.txt  pashto.txt  persian-advanced.txt  polish-advanced.txt  portuguese-advanced.txt  portuguese.txt  romanian-advanced.txt  russian-advanced.txt  russian.txt  (+8 more)
tenff/: __init__.py  __main__.py  game.py  populate_corpora  raw_terminal.py  terminal.py  util.py
tenff/data/: albanian-advanced.txt  aoeu-dutch.txt  aoeu-english.txt  armenian.txt  bengali.txt  bulgarian.txt  catalan.txt  croatian.txt  czech.txt  danish-advanced.txt  danish.txt  english.txt  filipino.txt  finnish.txt  french.txt  georgian.txt  greek.txt  hungarian-advanced.txt  hungarian.txt  icelandic-advanced.txt  icelandic.txt  japanese-advanced.txt  kurdish.txt  lithuanian-advanced.txt  macedonian.txt  malagasy.txt  norwegian-advanced.txt  persian.txt  polish.txt  romanian.txt  serbian.txt  slovak.txt  spanish.txt  (+18 more)
